# traDSSAT

./: .gitignore  .travis.yml  AUTHORS.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  renovate.json  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yaml
docs/.tx/: config  tx.sh
docs/source/: acknow.rst  conf.py  contrib.rst  high_level.rst  index.rst  inputs.rst  outputs.rst  quickstart.rst
docs/source/api/: api.rst  file.rst  inp_out.rst
docs/source/api/file/: base.rst  input.rst  output.rst
docs/source/api/high_level/: base.rst  inputs.rst  outputs.rst
docs/source/api/internals/: base.rst  inp_out.rst  template.rst  vals.rst  vars.rst
src/tradssat/: __init__.py  utils.py
src/tradssat/exper/: exper_vars.py
src/tradssat/genotype/: __init__.py  gen_file.py
src/tradssat/genotype/vars_/: _cropgro.py  _cropsim.py  alfrm.py  bhgro.py  bmgro.py  bngro.py  brfrm.py  brgro.py  cbgro.py  cogro.py  fbgro.py  gbgro.py  ptsub.py  ricer.py  sccsp.py  sgcer.py  tmgro.py  vbgro.py  whaps.py  whcer.py  whcrp.py
src/tradssat/mgrs/: input.py  mgr.py  out.py  soil_mgr.py  wth_mgr.py
src/tradssat/soil/: __init__.py  soil_file.py  soil_vars.py
src/tradssat/tmpl/: file.py  input.py  output.py  utils.py  vals.py  var.py
src/tradssat/weather/cli/: __init__.py
src/tradssat/weather/mth/: mth_file.py
tests/: .coveragerc  _inp_test_templ.py  test_exp.py  test_file.py  test_mgrs.py  test_runs.py  test_soil.py  test_wth.py  utils.py
tests/test_weather/: test_wth.py
tradssat/: AUTHORS.txt  __init__.py  utils.py
tradssat/exper/: __init__.py  exper_file.py  exper_vars.py
tradssat/file/: input.py  var.py
tradssat/genotype/: alfrm.py  cscas.py  gbgro.py  gen_file.py  gen_vars.py  mzcer.py  tnaro.py
tradssat/genotype/vars_/: _cropgro.py  _utils.py  alfrm.py  bacer.py  bacrp.py  bhgro.py  bmfrm.py  bmgro.py  bngro.py  brfrm.py  brgro.py  bscer.py  cbgro.py  chgro.py  cngro.py  cogro.py  cpgro.py  cropgro.py  cscas.py  csyca.py  fbgro.py  g0gro.py  gbgro.py  mlcer.py  mzcer.py  mzixm.py  pialo.py  pngro.py  ppgro.py  prgro.py  ptsub.py  ricer.py  riorz.py  sbgro.py  sccan.py  sccsp.py  sfgro.py  sgcer.py  sugro.py  swcer.py  (+7 more)
tradssat/mgrs/: __init__.py  gen_mgr.py  input.py  out.py
tradssat/runs/: __init__.py  exp_mgr.py  gen_mgr.py  input.py  main.py  mgr.py  out.py  soil_mgr.py  wth_mgr.py
tradssat/soil/: __init__.py  soil_file.py  soil_vars.py
tradssat/tmpl/: __init__.py  file.py  input.py  output.py  utils.py  vals.py  var.py
tradssat/weather/: __init__.py
tradssat/weather/cli/: cli_file.py  cli_vars.py
tradssat/weather/mth/: __init__.py  mth_vars.py
tradssat/weather/wth/: wth_file.py  wth_vars.py
(+150 files in other folders)
